# nail-parquet

./: .gitignore  Cargo.toml  LICENCE  README.md  THIRD_PARTY_LICENSES  code.txt  create_test_data.py  create_test_samples.py  debug_stratified.rs  test.xlsx
runtime_tests/: test_all_commands.sh  test_data.csv
src/: build.rs  cli.rs  error.rs  lib.rs  main.rs
src/commands/: append.rs  binning.rs  convert.rs  correlations.rs  count.rs  create.rs  dedup.rs  drop.rs  fill.rs  filter.rs  frequency.rs  head.rs  headers.rs  id.rs  merge.rs  metadata.rs  mod.rs  optimize.rs  outliers.rs  pivot.rs  preview.rs  rename.rs  sample.rs  schema.rs  search.rs  select.rs  shuffle.rs  size.rs  sort.rs  split.rs  stats.rs  tail.rs  update.rs
src/utils/: column.rs  format.rs  io.rs  mod.rs  output.rs  parquet_utils.rs  stats.rs
tests/: cli.rs  integration_tests.rs  performance.rs
tests/common/: common.rs  mod.rs
tests/fixtures/: mod.rs  sample.csv  sample.json  sample.parquet  sample.xlsx  sample2.csv  sample2.json  sample2.parquet  sample2.xlsx
