[package]
name = "nail-parquet"
version = "1.0.0"
edition = "2021"
authors = ["Johan HG Natter"]
description = "A fast parquet utility written in Rust"
license = "MIT"
repository = "https://github.com/Vitruves/nail-parquet"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

datafusion = "42.2"
datafusion-expr = "42.2"
datafusion-sql = "42.2"
datafusion-common = "42.2"

arrow = "53.4"
arrow-array = "53.4"
arrow-schema = "53.4"
arrow-cast = "53.4"
arrow-select = "53.4"
arrow-json = "53.4"
arrow-arith = "53.4"
parquet = "53.4"

rand = "0.8"
statrs = "0.17"
regex = "1.10"
rayon = "1.10"
futures = "0.3"
num_cpus = "1.16"
tabled = "0.16"
colored = "2.1"
indicatif = "0.17"
itertools = "0.13"
uuid = { version = "1.10", features = ["v4"] }

# Excel file support
calamine = "0.26"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"