[package]
name = "nail-parquet"
version = "1.6.4"
edition = "2021"
authors = ["Johan HG Natter"]
description = "A fast parquet utility written in Rust"
license = "MIT"
repository = "https://github.com/Vitruves/nail-parquet"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
datafusion = "42.2"
arrow = "53.4"
arrow-schema = "53.4"
parquet = "53.4"
rand = "0.8"
statrs = "0.17"
regex = "1"
futures = "0.3"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
term_size = "0.3"
crossterm = "0.27"
ratatui = { version = "0.24", default-features = false, features = ["crossterm"] }
calamine = "0.26"
rust_xlsxwriter = "0.88"
colored = "3.0.0"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[[bin]]
name = "nail"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"


